--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "angular-ui-bootstrap": "0.14.3",
     "angular-ui-sortable": "0.13.4",
     "angular-ui-tree": "2.9.0",
+    "angular-plotly.js": "1.3.2",
     "angular2-uuid": "^1.1.1",
     "angularjs-datetime-picker": "0.1.16",
     "bootstrap": "3.3.4",
@@ -79,6 +80,7 @@
     "ng2-dragula": "^1.5.0",
     "ngmap": "1.18.0",
     "ngx-color-picker": "^7.5.0",
+    "plotly.js": "1.49.3",
     "prismjs": "^1.16.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
