--- a/ui/Dockerfile.arm
+++ b/ui/Dockerfile.arm
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG BASE_IMAGE=nginx
+ARG BASE_IMAGE=arm64v8/nginx
 FROM $BASE_IMAGE
 
 COPY dist/assets/img/ /usr/share/nginx/html/assets/img/
@@ -40,7 +40,7 @@ COPY nginx_config/ssl.conf /app/nginx-confs/ssl.conf
 
 COPY docker-entrypoint.sh /
 
-RUN chown -R nginx:nginx /usr/share/nginx/html/
+RUN ["/bin/bash", "-c", "chown -R nginx:nginx /usr/share/nginx/html/"]
 
 COPY qemu-arm-static /usr/bin
 ENTRYPOINT ["/docker-entrypoint.sh"]
