--- a/pom.xml
+++ b/pom.xml
@@ -946,6 +946,7 @@
         <module>streampipes-wrapper-siddhi</module>
         <module>streampipes-wrapper-spark</module>
         <module>streampipes-wrapper-standalone</module>
+        <module>streampipes-node-management</module>
     </modules>
 
     <profiles>
