--- a/streampipes-resource-management/pom.xml
+++ b/streampipes-resource-management/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>streampipes-storage-management</artifactId>
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-user-management</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
