--- a/streampipes-wrapper/pom.xml
+++ b/streampipes-wrapper/pom.xml
@@ -34,6 +34,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
+			<artifactId>streampipes-service-extensions-base</artifactId>
+			<version>0.69.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-client</artifactId>
 			<version>0.69.0-SNAPSHOT</version>
 		</dependency>
