--- a/streampipes-mail/pom.xml
+++ b/streampipes-mail/pom.xml
@@ -18,6 +18,11 @@
             <version>0.69.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-user-management</artifactId>
+            <version>0.69.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.simplejavamail</groupId>
             <artifactId>simple-java-mail</artifactId>
         </dependency>
