--- a/streampipes-model-client/pom.xml
+++ b/streampipes-model-client/pom.xml
@@ -31,6 +31,11 @@
 		<!-- StreamPipes dependencies -->
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
+			<artifactId>streampipes-commons</artifactId>
+			<version>0.69.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-model-shared</artifactId>
 			<version>0.69.0-SNAPSHOT</version>
 		</dependency>
