--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -13,13 +13,27 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: run-cypress-tests
+name: validate-pr
 
 on:
   pull_request:
 
 jobs:
-  build-and-push-to-docker:
+  run-rat-plugin:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Validate code with RAT plugin
+        run: mvn rat:rat
+
+  run-cypress-e2e-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -41,9 +55,6 @@ jobs:
           npm install --unsafe-perm --legacy-peer-deps
           npm run build
 
-      - name: Validate code with RAT blugin
-        run: mvn rat:rat
-
       - name: Build with Maven
         run: mvn clean package -Dmaven.test.skip=true
 
@@ -59,9 +70,6 @@ jobs:
         with:
           install: false
           wait-on: 'http://localhost/#/login'
-          record: true
           wait-on-timeout: 120
           spec: cypress/tests/**/*.smoke.spec.ts
           working-directory: ui
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
