--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <consul-client.version>1.5.2</consul-client.version>
         <elasticsearch.version>6.6.2</elasticsearch.version>
         <empire-rdf4j.version>1.9.14</empire-rdf4j.version>
-        <flink.version>1.13.2</flink.version>
+        <flink.version>1.13.5</flink.version>
         <fogsy-qudt.version>1.0</fogsy-qudt.version>
         <fst.version>2.56</fst.version>
         <geojson-jackson.version>1.8</geojson-jackson.version>
@@ -83,7 +83,7 @@
         <jsr305.version>3.0.2</jsr305.version>
         <kafka.version>2.7.0</kafka.version>
         <lightcouch.version>0.2.0</lightcouch.version>
-        <log4j.version>2.12.1</log4j.version>
+        <log4j.version>2.17.0</log4j.version>
         <lz4.version>1.7.1</lz4.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <maven-invoker.version>2.2</maven-invoker.version>
@@ -398,6 +398,16 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
             <dependency>
